edition = "2023";

package raft;

option go_package = "github.com/mahmedtan/raft/main";

service Raft {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message RequestVoteRequest {}

message RequestVoteResponse {}

message PersistentState {
  int64 node_id = 2;
  int64 term = 1;
  int64 voted_for = 3;
  repeated LogEntry log_entries = 4;
}

message LogEntry {
  int64 term = 1;
  string command = 3;
}
